--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/Fawreez/cyberpunk-bot#readme",
   "dependencies": {
     "@discordjs/rest": "^1.5.0",
+    "@keyv/postgres": "^1.4.1",
     "chalk": "^5.2.0",
     "discord-api-types": "^0.37.30",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "keyv": "^4.5.2"
   }
 }
