--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "keyv": "^4.5.2",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "uuid": "^9.0.0"
   }
 }
